atualiza o workflow de distribuição Android para garantir permissões de execução no script run-gradle.sh e fornece instruções sobre a configuração do Java no arquivo gradle.properties, melhorando a flexibilidade do ambiente de desenvolvimento

--- a/.github/workflows/android_distribution_dev.yaml
+++ b/.github/workflows/android_distribution_dev.yaml
@@ -10,7 +10,7 @@ jobs:
       checks: write
       contents: write
       packages: write
-    runs-on: ubuntu-latest  # Alterado para ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Efetua checkout da branch
@@ -91,6 +91,7 @@ jobs:
         run: |
           # Preparar ambiente Flutter
           chmod +x localization
+          chmod +x android/run-gradle.sh
           flutter clean
           flutter pub get
           ./localization
