--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,7 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
-#org.gradle.java.home=/Library/Java/JavaVirtualMachines/liberica-jdk-11.jdk/Contents/Home
+# Para alternar entre as duas configurações de Java, use uma das seguintes opções:
+# 1. /opt/homebrew/opt/openjdk@17
+# 2. /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.14-7/x64
 org.gradle.java.home=/opt/homebrew/opt/openjdk@17
