adiciona execução do script run-gradle.sh no workflow de distribuição Android, garantindo que o ambiente Flutter seja preparado corretamente antes da execução das tarefas de build

--- a/.github/workflows/android_distribution_dev.yaml
+++ b/.github/workflows/android_distribution_dev.yaml
@@ -92,6 +92,7 @@ jobs:
           # Preparar ambiente Flutter
           chmod +x localization
           chmod +x android/run-gradle.sh
+          ./android/run-gradle.sh
           flutter clean
           flutter pub get
           ./localization
