atualiza o arquivo gradle.properties para utilizar a variável de ambiente JAVA_HOME, melhorando a flexibilidade na configuração do ambiente de desenvolvimento

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,4 +4,4 @@ android.enableJetifier=true
 # Para alternar entre as duas configurações de Java, use uma das seguintes opções:
 # 1. /opt/homebrew/opt/openjdk@17
 # 2. /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.14-7/x64
-org.gradle.java.home=/opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.14-7/x64
+org.gradle.java.home=${JAVA_HOME}
