--- a/.github/workflows/android_distribution_dev_local.yaml
+++ b/.github/workflows/android_distribution_dev_local.yaml
@@ -28,6 +28,8 @@ jobs:
           ./localization
           flutter packages pub run build_runner build --delete-conflicting-outputs
           flutter build apk --debug --flavor dev -t lib/core/flavors/main_dev.dart
+        env:
+          JAVA_HOME: /opt/homebrew/opt/openjdk@17
 
       - name: Deploy do firebase
         run: |
