--- a/.github/workflows/android_distribution_dev_local.yaml
+++ b/.github/workflows/android_distribution_dev_local.yaml
@@ -20,9 +20,12 @@ jobs:
         run: |
           # Detecta o caminho do Java instalado
           JAVA_PATH=$(/usr/libexec/java_home -v 17)
-          echo "JAVA_HOME=$JAVA_PATH" >> $GITHUB_ENV
-          echo "PATH=$JAVA_PATH/bin:$PATH" >> $GITHUB_ENV
-          echo "Java path configurado: $JAVA_PATH"
+          export JAVA_HOME=$JAVA_PATH
+          export PATH=$JAVA_HOME/bin:$PATH
+          echo "JAVA_HOME=$JAVA_HOME" >> $GITHUB_ENV
+          echo "PATH=$PATH" >> $GITHUB_ENV
+          echo "Java path configurado: $JAVA_HOME"
+          java -version
 
       - name: Setup Fastlane
         run: |
