--- a/.github/workflows/android_distribution_dev_local.yaml
+++ b/.github/workflows/android_distribution_dev_local.yaml
@@ -26,6 +26,12 @@ jobs:
           echo "PATH=$PATH" >> $GITHUB_ENV
           echo "Java path configurado: $JAVA_HOME"
           java -version
+          # Configura a versão do Java para o Gradle
+          echo "org.gradle.java.home=$JAVA_HOME" > android/gradle.properties
+          echo "org.gradle.jvmargs=-Xmx1536M -Dfile.encoding=UTF-8" >> android/gradle.properties
+          echo "android.defaults.buildfeatures.buildconfig=true" >> android/gradle.properties
+          echo "android.nonTransitiveRClass=true" >> android/gradle.properties
+          echo "android.nonFinalResIds=false" >> android/gradle.properties
 
       - name: Setup Fastlane
         run: |
