--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,3 +4,9 @@ android.enableJetifier=true
 # Para alternar entre as duas configurações de Java, use uma das seguintes opções:
 # 1. /opt/homebrew/opt/openjdk@17
 # 2. /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.14-7/x64
+org.gradle.java.home=${JAVA_HOME}
+# Configurações de versão do Java para compilação
+org.gradle.jvmargs=-Xmx1536M -Dfile.encoding=UTF-8
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=true
+android.nonFinalResIds=false
