adiciona a herança de segredos nas configurações de distribuição para Android e iOS nos arquivos de workflow

--- a/.github/workflows/distribution_store_local.yaml
+++ b/.github/workflows/distribution_store_local.yaml
@@ -10,7 +10,9 @@ jobs:
   ios_distribution_local:
     needs: tests
     uses: polvo-labs/cincominutos-app/.github/workflows/ios_distribution_store_local.yaml@main
+    secrets: inherit
 
   android_distribution_local:
     needs: tests
     uses: polvo-labs/cincominutos-app/.github/workflows/android_distribution_store_local.yaml@main
+    secrets: inherit
