atualiza execução dos testes de integração para rodar todos os testes do diretório em vez de arquivos específicos

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -86,5 +86,4 @@ jobs:
 
       - name: Execute Integration Tests
         run: |
-          flutter test integration_test/modules/authentication/screens/welcome/welcome_integration_test.dart
-          flutter test integration_test/app_test.dart
+          flutter test integration_test
